--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,26 +147,29 @@ input[type=submit] {
 /*Portfolio page*/
 .work {
 	padding:0;
-	margin:0;
+	justify-content:center;
 }
 
 .work img {
-  width: 100%;
+  width: 90%;
   opacity: 0.8;
   padding:0;
+  margin:0 0% 5% 5%;
+
 }
 
 .work h3 {
   position: absolute;
-  bottom: 20px;
-  width: 100%;
+  bottom: 5%;
+  width: 90%;
+
   padding:10px 0;
   font-weight: 300;
-  line-height: 30px;
+  line-height: 150%;
   color: #fff;
   text-align: center;
   background: #4aaaa5;
   border-bottom: 0;
-  margin:0;
+  margin:0 0% 5% 5%;
 }
 
